compiler-core/src/package_interface/snapshots/rakun_core__package_interface__tests__internal_definitions_are_not_included.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "\n@internal pub const float = 1.1\n@internal pub fn main() {}\n@internal pub type Foo\n@internal pub type Bar = Int\n"
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "rakun-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {},
      "constants": {},
      "functions": {}
    }
  }
}
