compiler-core/src/package_interface/snapshots/rakun_core__package_interface__tests__internal_modules_are_not_exported.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "pub fn main() { 1 }"
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "rakun-version-constraint": "1.0.0",
  "modules": {}
}
