compiler-core/src/package_interface/snapshots/rakun_core__package_interface__tests__opaque_constructors_are_not_exposed.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "pub opaque record Wibble { Wob }"
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "rakun-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {
        "Wibble": {
          "documentation": null,
          "deprecation": null,
          "parameters": 0,
          "constructors": []
        }
      },
      "constants": {},
      "functions": {}
    }
  }
}
