compiler-core/src/package_interface/snapshots/rakun_core__package_interface__tests__private_definitions_are_not_included.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "\nconst float = 1.1\nfn main() {}\ntype Wibble\ntype Wob = Int\n"
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "rakun-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {},
      "constants": {},
      "functions": {}
    }
  }
}
