compiler-core/src/package_interface/snapshots/rakun_core__package_interface__tests__type_aliases.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: pub type Wibble<a>= List<a>
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "rakun-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {
        "Wibble": {
          "documentation": null,
          "deprecation": null,
          "parameters": 1,
          "alias": {
            "kind": "named",
            "name": "List",
            "package": "",
            "module": "rakun",
            "parameters": [
              {
                "kind": "variable",
                "id": 0
              }
            ]
          }
        }
      },
      "types": {},
      "constants": {},
      "functions": {}
    }
  }
}
