compiler-core/src/package_interface/snapshots/rakun_core__package_interface__tests__type_definition.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "\n/// Wibble's documentation\npub record Wibble<a, b> {\n  Wibble\n  Wobble\n}\n"
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "rakun-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {
        "Wibble": {
          "documentation": " Wibble's documentation",
          "deprecation": null,
          "parameters": 2,
          "constructors": [
            {
              "documentation": null,
              "name": "Wibble",
              "parameters": []
            },
            {
              "documentation": null,
              "name": "Wobble",
              "parameters": []
            }
          ]
        }
      },
      "constants": {},
      "functions": {}
    }
  }
}
